# VideoSentinel

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/videosentinel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-utils.cpp  opencv-utils.h  update-video-sentinel-lib.sh
app/src/main/cpp/video-sentinel/detection/: CMakeLists.txt  DetectionImpl.h  Slices.h
app/src/main/cpp/video-sentinel/math2d/: CMakeLists.txt  math2d.cpp  math2d.h  value_test.h
app/src/main/cpp/video-sentinel/par/: Executor.h
app/src/main/cpp/video-sentinel/preview/: preview.h
app/src/main/cpp/video-sentinel/webcam/: CMakeLists.txt
app/src/main/java/com/example/videosentinel/: CameraManager.kt  MainActivity.kt  ObjectGraphic.kt  PhotoActivity.kt  Rectangle.kt  RectangleDetectionProcessor.kt  RectangleOverlay.kt  RectangleOverlayView.kt  RectangleQuerier.kt  SettingsActivity.kt  SettingsFragment.kt  SettingsManager.kt  VideoActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_photo.xml  activity_settings.xml  activity_video.xml  main_activity.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/example/videosentinel/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
